Adapt to changes in Argeo Commons.

--- a/org.argeo.suite.core/pom.xml
+++ b/org.argeo.suite.core/pom.xml
@@ -25,7 +25,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.argeo.commons</groupId>
-			<artifactId>org.argeo.maintenance</artifactId>
+			<artifactId>org.argeo.cms.jcr</artifactId>
 			<version>${version.argeo-commons}</version>
 		</dependency>
 	</dependencies>
