--- a/org.argeo.entity.core/pom.xml
+++ b/org.argeo.entity.core/pom.xml
@@ -20,7 +20,7 @@
 		<!-- Argeo Commons -->
 		<dependency>
 			<groupId>org.argeo.commons</groupId>
-			<artifactId>org.argeo.cms</artifactId>
+			<artifactId>org.argeo.cms.jcr</artifactId>
 			<version>${version.argeo-commons}</version>
 		</dependency>
 	</dependencies>
