Adapt to changes in Argeo Commons

--- a/org.argeo.entity.ui/pom.xml
+++ b/org.argeo.entity.ui/pom.xml
@@ -27,8 +27,9 @@
 		<!-- Specific -->
 		<dependency>
 			<groupId>org.argeo.commons</groupId>
-			<artifactId>org.argeo.eclipse.ui.rap</artifactId>
+			<artifactId>org.argeo.swt.specific.rap</artifactId>
 			<version>${version.argeo-commons}</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<!-- Eclipse E4 -->
