--- a/org.argeo.geo.ui/pom.xml
+++ b/org.argeo.geo.ui/pom.xml
@@ -17,6 +17,14 @@
 			<version>2.3-SNAPSHOT</version>
 		</dependency>
 
+		<!-- Specific -->
+		<dependency>
+			<groupId>org.argeo.commons</groupId>
+			<artifactId>org.argeo.swt.specific.rap</artifactId>
+			<version>${version.argeo-commons}</version>
+			<scope>provided</scope>
+		</dependency>
+
 		<!-- Eclipse E4 -->
 		<dependency>
 			<groupId>org.argeo.tp</groupId>
@@ -25,13 +33,5 @@
 			<type>pom</type>
 			<scope>provided</scope>
 		</dependency>
-		<!-- Specific -->
-		<dependency>
-			<groupId>org.argeo.commons</groupId>
-			<artifactId>org.argeo.eclipse.ui.rap</artifactId>
-			<version>${version.argeo-commons}</version>
-			<scope>provided</scope>
-		</dependency>
-
 	</dependencies>
 </project>
