--- a/sdk/argeo-suite-rap.properties
+++ b/sdk/argeo-suite-rap.properties
@@ -2,24 +2,26 @@ argeo.osgi.start.2.node=\
 org.eclipse.equinox.http.servlet,\
 org.eclipse.equinox.metatype,\
 org.eclipse.equinox.cm,\
-org.eclipse.rap.rwt.osgi
+org.eclipse.rap.rwt.osgi,\
+org.argeo.init
 
 argeo.osgi.start.2.suite=\
 org.apache.tika.parsers
 
 argeo.osgi.start.3.node=\
-org.argeo.cms
+org.argeo.cms,\
+org.argeo.cms.jcr,\
+org.argeo.cms.servlet,\
 
 argeo.osgi.start.5.suite=\
-org.argeo.suite.core,\
-org.argeo.suite.ui,\
-org.argeo.suite.theme.default,\
-org.argeo.suite.ui.rap
+org.argeo.app.core,\
+org.argeo.app.ui,\
+org.argeo.app.theme.default,\
+org.argeo.app.ui.rap
 
 argeo.osgi.start.6.suite=\
-org.argeo.documents.ui,\
-org.argeo.people.ui,\
-org.argeo.geo.ui
+org.argeo.app.servlet.publish,\
+org.argeo.app.servlet.odk
 
 
 # Local
@@ -37,7 +39,7 @@ argeo.i18n.defaultLocale=en
 #tika.config=/home/mbaudier/dev/git/gpl/argeo-suite/sdk/exec/argeo-office-e4-rap/data/indexes/node/tika-config.xml
 
 # Logging
-log4j.configuration=file:../../log4j.properties
+log.org.argeo=DEBUG
 
 # DON'T CHANGE BELOW
 org.eclipse.equinox.http.jetty.autostart=false
