--- a/org.argeo.app.api/pom.xml
+++ b/org.argeo.app.api/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.argeo.suite</groupId>
 		<artifactId>argeo-suite</artifactId>
-		<version>2.3-SNAPSHOT</version>
+		<version>2.3.3</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>org.argeo.app.api</artifactId>
