--- a/dep/org.argeo.suite.dep.ui.rcp/pom.xml
+++ b/dep/org.argeo.suite.dep.ui.rcp/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.argeo.suite</groupId>
 		<artifactId>dep</artifactId>
-		<version>2.3.3</version>
+		<version>2.3-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>org.argeo.suite.dep.ui.rcp</artifactId>
