--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	</parent>
 	<groupId>org.argeo.suite</groupId>
 	<artifactId>argeo-suite</artifactId>
-	<version>2.3.3</version>
+	<version>2.3-SNAPSHOT</version>
 	<name>Argeo Suite</name>
 	<packaging>pom</packaging>
 	<url>http://www.argeo.org/</url>
@@ -49,7 +49,7 @@
 		<connection>scm:git:http://git.argeo.org/gpl/argeo-suite.git</connection>
 		<url>http://git.argeo.org/?p=gpl/argeo-suite.git;a=summary</url>
 		<developerConnection>scm:git:https://code.argeo.org/git/gpl/argeo-suite.git</developerConnection>
-		<tag>argeo-suite-2.3.3</tag>
+		<tag>HEAD</tag>
 	</scm>
 	<organization>
 		<name>Argeo GmbH</name>
