Simplify CMS app deployment.

--- a/sdk/argeo-suite-rap.properties
+++ b/sdk/argeo-suite-rap.properties
@@ -10,6 +10,7 @@ org.apache.tika.parsers
 
 argeo.osgi.start.3.node=\
 org.argeo.cms,\
+org.argeo.cms.ui.rap,\
 org.argeo.cms.jcr,\
 org.argeo.cms.servlet,\
 
@@ -17,7 +18,6 @@ argeo.osgi.start.5.suite=\
 org.argeo.app.core,\
 org.argeo.app.ui,\
 org.argeo.app.theme.default,\
-org.argeo.app.ui.rap
 
 argeo.osgi.start.6.suite=\
 org.argeo.app.servlet.publish,\
