--- a/sdk/argeo-suite-rcp.properties
+++ b/sdk/argeo-suite-rcp.properties
@@ -10,6 +10,7 @@ org.apache.tika.parsers
 argeo.osgi.start.3.node=\
 org.argeo.cms,\
 org.argeo.cms.jcr,\
+org.argeo.cms.servlet,\
 org.argeo.cms.ui.rcp
 
 argeo.osgi.start.5.suite=\
@@ -24,7 +25,7 @@ org.argeo.app.servlet.odk
 
 # Local
 argeo.node.repo.type=h2
-org.osgi.service.http.port=7070
+org.osgi.service.http.port=0
 #org.osgi.service.http.port.secure=7073
 
 #argeo.node.useradmin.uris=ldap://cn=Directory%20Manager:argeoargeo@localhost:10389/dc=example,dc=com
