--- a/org.argeo.app.swt/.project
+++ b/org.argeo.app.swt/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.argeo.app.ux</name>
+	<name>org.argeo.app.swt</name>
 	<comment></comment>
 	<projects>
 	</projects>
