--- a/org.argeo.app.ui/config/personUiProvider.properties
+++ b/org.argeo.app.ui/config/personUiProvider.properties
@@ -1,3 +1,3 @@
 service.pid=argeo.people.ui.personUiProvider
 
-entity.type=ldap:inetOrgPerson,ldap:groupOfNames
+entity.type=ldap:inetOrgPerson,ldap:posixAccount
