Improve launch file

--- a/sdk/argeo-suite.properties
+++ b/sdk/argeo-suite.properties
@@ -1,5 +1,4 @@
 argeo.osgi.start.2=\
-org.eclipse.equinox.console,\
 org.eclipse.equinox.http.servlet,\
 org.apache.felix.scr,\
 org.eclipse.rap.rwt.osgi,\
@@ -15,8 +14,11 @@ org.argeo.cms.lib.sshd,\
 org.argeo.cms.lib.equinox,\
 org.argeo.cms.lib.jetty,\
 
+argeo.osgi.start.4=\
+org.argeo.cms.jcr
+
 argeo.osgi.start.5=\
-org.argeo.cms.jcr,\
+org.argeo.app.profile.acr.fs,\
 org.argeo.app.core,\
 org.argeo.app.ui,\
 org.argeo.app.theme.default,\
@@ -35,3 +37,11 @@ log.org.argeo=DEBUG
 
 # DON'T CHANGE BELOW
 org.eclipse.equinox.http.jetty.autostart=false
+org.osgi.framework.system.packages.extra=\
+com.sun.net.httpserver,\
+com.sun.jndi.ldap,\
+com.sun.jndi.ldap.sasl,\
+com.sun.jndi.dns,\
+com.sun.security.jgss,\
+com.sun.nio.file,\
+com.sun.nio.sctp
