--- a/sdk/deploy/argeo-desktop/etc/argeo.user.d/desktop/config.ini
+++ b/sdk/deploy/argeo-desktop/etc/argeo.user.d/desktop/config.ini
@@ -1,9 +1,11 @@
+osgi.clean=true
+
 argeo.osgi.start.2=\
 org.eclipse.equinox.http.servlet,\
+org.eclipse.equinox.consolet,\
 org.apache.felix.scr,\
 org.eclipse.rap.rwt.osgi,\
 org.apache.tika.parsers,\
-org.argeo.init
 
 argeo.osgi.start.3=\
 org.argeo.cms,\
@@ -31,4 +33,5 @@ argeo.node.repo.type=h2
 argeo.http.port=0
 
 argeo.osgi.sources=\
-a2:///?swt=rcp
+a2+reference:///?swt=rcp,\
+a2+reference:///usr/lib/a2/?swt=rcp
