--- a/sdk/deploy/argeo-server/etc/argeo.d/server/config.ini
+++ b/sdk/deploy/argeo-server/etc/argeo.d/server/config.ini
@@ -4,10 +4,11 @@ argeo.osgi.start.2=\
 org.eclipse.equinox.http.servlet,\
 org.eclipse.equinox.console,\
 org.apache.felix.scr,\
+org.eclipse.rap.rwt.osgi,\
 
 argeo.osgi.start.3=\
 org.argeo.cms,\
-org.argeo.cms.swt.rcp,\
+org.argeo.cms.swt.rap,\
 org.argeo.cms.ee,\
 org.argeo.cms.lib.sshd,\
 org.argeo.cms.lib.equinox,\
@@ -24,11 +25,20 @@ org.argeo.app.theme.default,\
 org.argeo.app.servlet.publish,\
 org.argeo.app.servlet.odk
 
-
 # Local
+argeo.http.port=8080
+#argeo.https.port=8443
+
+argeo.directory=dc=example,dc=com.ldif
+#argeo.directory=ldap://cn=Directory%20Manager:password@localhost/dc=example,dc=com
+#argeo.directory=ipa:///
+
 argeo.node.repo.type=h2
-argeo.http.port=0
+
+#argeo.node.repo.type=postgresql_ds
+#argeo.node.repo.dburl=jdbc:postgresql://localhost/argeo
+#argeo.node.repo.dbuser=
+#argeo.node.repo.dbpassword=
 
 argeo.osgi.sources=\
-a2+reference:///?swt=rcp,\
-a2+reference:///usr/lib/a2/?swt=rcp
+a2+reference:///?swt=rap
