Fix desktop initialisation

--- a/sdk/deploy/argeo-desktop/etc/argeo.user.d/desktop/config.ini
+++ b/sdk/deploy/argeo-desktop/etc/argeo.user.d/desktop/config.ini
@@ -4,6 +4,8 @@ argeo.osgi.start.2=\
 org.eclipse.equinox.http.servlet,\
 org.eclipse.equinox.console,\
 org.apache.felix.scr,\
+org.eclipse.core.runtime,\
+org.eclipse.e4.ui.css.swt,\
 
 argeo.osgi.start.3=\
 org.argeo.cms,\
