--- a/swt/org.argeo.app.ui/config/hierarchyUnitUiProvider.properties
+++ b/swt/org.argeo.app.ui/config/hierarchyUnitUiProvider.properties
@@ -1,3 +1,3 @@
 service.pid=argeo.people.ui.hierarchyUnitUiProvider
 
-entity.type=ldap:organizationalUnit
+entity.type=ldap:organizationalUnit,ldap:nsContainer,ldap:dcObject
