--- a/swt/org.argeo.app.ui/config/peopleLayer.properties
+++ b/swt/org.argeo.app.ui/config/peopleLayer.properties
@@ -4,4 +4,4 @@ icon=people
 weights=3000,7000
 title=%people
 
-entity.type=ldap:inetOrgPerson,ldap:groupOfNames,ldap:organizationalUnit
+entity.type=ldap:inetOrgPerson,ldap:groupOfNames,ldap:organizationalUnit,ldap:nsContainer,ldap:dcObject
