Clarify development launchers

--- a/sdk/argeo-suite-desktop.properties
+++ b/sdk/argeo-suite-desktop.properties
@@ -22,7 +22,8 @@ org.argeo.app.theme.default,\
 argeo.node.repo.type=h2
 argeo.http.port=7070
 
-argeo.directory=os:///
+#argeo.directory=os:///
+argeo.directory=ipa:///
 
 # Logging
 log.org.argeo=DEBUG
