Adapt to changes in Argeo TP

--- a/sdk/argeo-suite-desktop.properties
+++ b/sdk/argeo-suite-desktop.properties
@@ -31,6 +31,8 @@ log.org.argeo=DEBUG
 # DON'T CHANGE BELOW
 org.eclipse.equinox.http.jetty.autostart=false
 org.osgi.framework.system.packages.extra=\
+sun.security.internal.spec,\
+sun.security.provider,\
 com.sun.net.httpserver,\
 com.sun.jndi.ldap,\
 com.sun.jndi.ldap.sasl,\
