Remove JCR depdencies

--- a/org.argeo.app.core/build.properties
+++ b/org.argeo.app.core/build.properties
@@ -1,6 +1,7 @@
-output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/
-source.. = src/
+               OSGI-INF/,\
+               OSGI-INF/appUserState.xml
 additional.bundles = org.argeo.init
+source.. = src/
+output.. = bin/
