Extract JCR in a separate bundle

--- a/org.argeo.app.core/build.properties
+++ b/org.argeo.app.core/build.properties
@@ -1,7 +1,8 @@
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
-               OSGI-INF/appUserState.xml
+               OSGI-INF/appUserState.xml,\
+               OSGI-INF/suiteMaintenance.xml
 additional.bundles = org.argeo.init
 source.. = src/
 output.. = bin/
