--- a/sdk/argeo-suite-server.properties
+++ b/sdk/argeo-suite-server.properties
@@ -19,10 +19,12 @@ org.argeo.cms.jcr
 argeo.osgi.start.5=\
 org.argeo.app.profile.acr.fs,\
 org.argeo.app.core,\
+org.argeo.app.jcr,\
 org.argeo.app.ui,\
 org.argeo.app.theme.default,\
 org.argeo.app.servlet.publish,\
-org.argeo.app.servlet.odk
+org.argeo.app.servlet.odk,\
+org.argeo.product.knowledge,\
 
 
 # Local
