Introduce separate Knowledge App

--- a/org.argeo.product.knowledge/config/swtArgeoApp.properties
+++ b/org.argeo.product.knowledge/config/swtArgeoApp.properties
@@ -1,5 +1,7 @@
 service.pid=argeo.product.knowledge.swtArgeoApp
 
+sharedPidPrefix=argeo.suite.ui
+
 event.topics=argeo/suite/*
 
 argeo.cms.app.contextName=argeo/knowledge
