Introduce terms content provider

--- a/org.argeo.app.core/build.properties
+++ b/org.argeo.app.core/build.properties
@@ -2,7 +2,8 @@ bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
                OSGI-INF/appUserState.xml,\
-               OSGI-INF/suiteMaintenance.xml
+               OSGI-INF/suiteMaintenance.xml,\
+               OSGI-INF/termsContentProvider.xml
 additional.bundles = org.argeo.init
 source.. = src/
 output.. = bin/
