Improve Argeo Knowledge app.

--- a/org.argeo.product.knowledge/config/termsLayer.properties
+++ b/org.argeo.product.knowledge/config/termsLayer.properties
@@ -3,4 +3,4 @@ service.pid=argeo.product.knowledge.termsLayer
 title=Terms
 icon=dashboard
 
-entity.type=entity:terms,entity:term
+entity.type=entity:terms,entity:term,entity:typologies
