Rename Knowledge product

--- a/sdk/argeo-suite-server.properties
+++ b/sdk/argeo-suite-server.properties
@@ -24,7 +24,7 @@ org.argeo.app.ui,\
 org.argeo.app.theme.default,\
 org.argeo.app.servlet.publish,\
 org.argeo.app.servlet.odk,\
-org.argeo.product.knowledge,\
+org.argeo.suite.knowledge,\
 
 
 # Local
