Prepare multi JavaScript modules

--- a/js/Makefile
+++ b/js/Makefile
@@ -3,7 +3,7 @@ include ../sdk.mk
 A2_CATEGORY = org.argeo.suite
 
 BUNDLES = \
-org.argeo.app.geo.js \
+org.argeo.app.js \
 
 all: webpack osgi
 
@@ -17,10 +17,10 @@ clean:
 	$(foreach bundle, $(BUNDLES), rm -rf $(bundle)/org) 
 
 npm-install:
-	cd org.argeo.app.geo.js && npm install
+	npm install
 	
 jsdoc:
-	org.argeo.app.geo.js/node_modules/.bin/jsdoc -r org.argeo.app.geo.js/src/org.argeo.app.geo.js \
-		-d $(SDK_BUILD_BASE)/jsdoc/org.argeo.app.geo.js
+	node_modules/.bin/jsdoc -r src \
+		-d $(SDK_BUILD_BASE)/jsdoc/argeo-suite-js
 
 include  $(SDK_SRC_BASE)/sdk/argeo-build/osgi.mk
