--- a/js/org.argeo.app.js/.project
+++ b/js/org.argeo.app.js/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.argeo.app.geo.js</name>
+	<name>org.argeo.app.js</name>
 	<comment></comment>
 	<projects>
 	</projects>
