Rename node module

--- a/js/package.json
+++ b/js/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "org.argeo.app.geo.js",
+	"name": "org.argeo.app.js",
 	"version": "2.3.0.next",
 	"description": "",
 	"private": "true",
