--- a/js/package.json
+++ b/js/package.json
@@ -23,8 +23,8 @@
 		"webpack-merge": "^5.9.0"
 	},
 	"dependencies": {
-		"@nieuwlandgeo/sldreader": "^0.3.1",
-		"@observablehq/plot": "^0.6.10",
-		"ol": "7.5.x"
+		"@nieuwlandgeo/sldreader": "0.3.x",
+		"chart.js": "4.x.x",
+		"ol": "8.x.x"
 	}
 }
