Improve RCP support

--- a/sdk/argeo-suite-desktop.properties
+++ b/sdk/argeo-suite-desktop.properties
@@ -7,6 +7,8 @@ org.argeo.cms,\
 org.argeo.cms.swt.rcp,\
 org.argeo.cms.ee,\
 org.argeo.cms.lib.dbus,\
+org.argeo.cms.lib.equinox,\
+org.argeo.cms.lib.jetty,\
 
 argeo.osgi.start.4=\
 org.argeo.cms.jcr
@@ -14,8 +16,10 @@ org.argeo.cms.jcr
 argeo.osgi.start.5=\
 org.argeo.app.profile.acr.fs,\
 org.argeo.app.core,\
+org.argeo.app.jcr,\
 org.argeo.app.ui,\
 org.argeo.app.theme.default,\
+org.argeo.app.geo,\
 
 
 # Local
