Update argeo-server deploy properties

--- a/sdk/deploy/argeo-server/etc/argeo.d/server/config.ini
+++ b/sdk/deploy/argeo-server/etc/argeo.d/server/config.ini
@@ -20,6 +20,8 @@ org.argeo.cms.jcr
 argeo.osgi.start.5=\
 org.argeo.app.profile.acr.fs,\
 org.argeo.app.core,\
+org.argeo.app.geo,\
+org.argeo.app.jcr,\
 org.argeo.app.ui,\
 org.argeo.app.theme.default,\
 org.argeo.app.servlet.publish,\
