Clean up dev launchers

--- a/sdk/argeo-suite-desktop.properties
+++ b/sdk/argeo-suite-desktop.properties
@@ -1,5 +1,6 @@
 argeo.osgi.start.2=\
 org.apache.felix.scr,\
+org.apache.tika.parsers,\
 org.argeo.init
 
 argeo.osgi.start.3=\
@@ -9,9 +10,11 @@ org.argeo.cms.ee,\
 org.argeo.cms.lib.dbus,\
 org.argeo.cms.lib.equinox,\
 org.argeo.cms.lib.jetty,\
+org.argeo.cms.jshell,\
 
 argeo.osgi.start.4=\
-org.argeo.cms.jcr
+org.argeo.cms.jcr,\
+org.argeo.app.profile.acr.fs,\
 
 argeo.osgi.start.5=\
 org.argeo.app.profile.acr.fs,\
@@ -20,13 +23,11 @@ org.argeo.app.geo,\
 org.argeo.app.jcr,\
 org.argeo.app.ui,\
 org.argeo.app.theme.default,\
-org.argeo.app.servlet.publish,\
-org.argeo.app.servlet.odk
 
 
 # Local
 argeo.node.repo.type=h2
-argeo.http.port=7070
+#argeo.http.port=7070
 
 #argeo.directory=os:///
 argeo.directory=ipa:///
@@ -37,6 +38,7 @@ log.org.argeo=DEBUG
 # DON'T CHANGE BELOW
 org.eclipse.equinox.http.jetty.autostart=false
 org.osgi.framework.system.packages.extra=\
+sun.security.util,\
 sun.security.internal.spec,\
 sun.security.provider,\
 com.sun.net.httpserver,\
