--- a/sdk/argeo-suite-server.properties
+++ b/sdk/argeo-suite-server.properties
@@ -2,6 +2,7 @@ argeo.osgi.start.2=\
 org.eclipse.equinox.http.servlet,\
 org.apache.felix.scr,\
 org.eclipse.rap.rwt.osgi,\
+org.apache.tika.parsers,\
 org.argeo.init
 
 argeo.osgi.start.3=\
@@ -9,16 +10,20 @@ org.argeo.cms,\
 org.argeo.cms.swt.rap,\
 org.argeo.cms.swt.rcp,\
 org.argeo.cms.ee,\
+org.argeo.cms.lib.dbus,\
 org.argeo.cms.lib.sshd,\
 org.argeo.cms.lib.equinox,\
 org.argeo.cms.lib.jetty,\
+org.argeo.cms.jshell,\
 
 argeo.osgi.start.4=\
-org.argeo.cms.jcr
+org.argeo.cms.jcr,\
+org.argeo.app.profile.acr.fs,\
 
 argeo.osgi.start.5=\
 org.argeo.app.profile.acr.fs,\
 org.argeo.app.core,\
+org.argeo.app.geo,\
 org.argeo.app.jcr,\
 org.argeo.app.ui,\
 org.argeo.app.theme.default,\
@@ -39,6 +44,7 @@ log.org.argeo=DEBUG
 # DON'T CHANGE BELOW
 org.eclipse.equinox.http.jetty.autostart=false
 org.osgi.framework.system.packages.extra=\
+sun.security.util,\
 sun.security.internal.spec,\
 sun.security.provider,\
 com.sun.net.httpserver,\
