Transform ODK servlets into HTTP handlers

--- a/org.argeo.app.servlet.odk/build.properties
+++ b/org.argeo.app.servlet.odk/build.properties
@@ -2,5 +2,5 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
-               OSGI-INF/odkServletContext.xml
+               org.argeo.app.jcr/OSGI-INF/odkServletContext.xml
 source.. = src/
