Migrate FOP servlet to HTPP handler

--- a/org.argeo.app.publish/.project
+++ b/org.argeo.app.publish/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.argeo.app.servlet.publish</name>
+	<name>org.argeo.app.publish</name>
 	<comment></comment>
 	<projects>
 	</projects>
